added home page and search function

--- a/views/boilerplate2.ejs
+++ b/views/boilerplate2.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paperboy</title>
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="/css/hamburgers.css">
     <link rel="stylesheet" href="/css/styles.css">
@@ -22,11 +22,16 @@
                 
             </div>
             <div class="list-group list-group-flush">
-                <a href="/" class="list-group-item list-group-item-action btn-2">News</a>
-                <a href="#" class="list-group-item list-group-item-action btn-2">Summarizer</a>
-                <a href="#" class="list-group-item list-group-item-action btn-2">Github</a>
+                <a href="/" class="list-group-item list-group-item-action btn-2">Home</a>
+                <a href="/world" class="list-group-item list-group-item-action btn-2">World</a>
+                <a href="/technology" class="list-group-item list-group-item-action btn-2">Technology</a>
+                <a href="/science" class="list-group-item list-group-item-action btn-2">Science</a>
+                <a href="/environment" class="list-group-item list-group-item-action btn-2">Environment</a>
+                <!-- <a href="#" class="list-group-item list-group-item-action btn-2">Summarizer</a> -->
+                <a href="/about" class="list-group-item list-group-item-action btn-2">About</a>
             </div>
             <div class="sidebar-footer">
+                <p>3ccc7e2</p>
                 <p><em>work in progress</em></p>
                 <p>by</p>
                 <p>Allen Gao</p>
@@ -48,20 +53,24 @@
 
         <script src="/js/jquery.min.js"></script>
         <script src="/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
         <script>
             // Menu toggle scripts
             $("#menu-toggle").click(function(e) {
                 e.preventDefault();
-                $("#wrapper").toggleClass("toggled");
+                $(".wrapper").toggleClass("toggled");
+                $(".show-wrapper").toggleClass("toggled");
+                $(".home-wrapper").toggleClass("toggled");
+                $("#sidebar-wrapper").toggleClass("toggled");
                 $("#menu-toggle").toggleClass('is-active');
-                $("#menu-toggle").toggleClass("toggled");
+                // $("#menu-toggle").toggleClass("toggled");
             });
     
     
             $(window).resize(function(){
-                console.log('resize called');
+                // console.log('resize called');
                 var width = $(window).width();
                 const div = document.querySelector("#menu-toggle");
                 // if(width <= 768 && div.classList.contains("toggled")){
@@ -70,48 +79,38 @@
                 // else if(width > 768 && !div.classList.contains("toggled")){
                 //     $("#menu-toggle").addClass('is-active');
                 // }
-                if(width <= 768){
+                if(width < 768){
                     $("#menu-toggle").removeClass('is-active');
+                    $("#sidebar-wrapper").addClass("toggled");
+                    $(".wrapper").addClass("toggled");
+                    $(".show-wrapper").addClass("toggled");
+                    $(".home-wrapper").addClass("toggled");
+                    $('.slide-in-h').each( function(i, elem) {
+                        $(elem).removeClass('slide-in-h');
+                    }); 
+                    $('.slide-in').each( function(i, elem) {
+                        $(elem).removeClass('slide-in');
+                    }); 
                 }
-                else if(width > 768){
-                    $("#menu-toggle").addClass('is-active');
+                else {
+                    $('.news-container').each( function(i, elem) {
+                        // $(elem).addClass('slide-in-h');
+                    }); 
                 }
+                // else if(width >= 768){
+                //     $("#menu-toggle").addClass('is-active');
+                //     $("#sidebar-wrapper").removeClass("toggled");
+                //     $(".wrapper").removeClass("toggled");
+                //     $(".show-wrapper").removeClass("toggled");
+                // }
             })
             .resize();//trigger the resize event on page load.
 
-            // Scrolling animation scripts
-            $(document).ready(function() {
-                handleScroll();
-                document.addEventListener('scroll', function(event) {
-                    handleScroll();
-                }, true);
-                
-            });
+
+            //scroll
             
-            function handleScroll() {
-                $('.slide-in').each( function(i, elem) {
-                    var object_top = $(elem).offset().top + $(elem).outerHeight()/5;
-                    var screen_bottom = $(window).scrollTop() + $(window).height();
-    
-                    if (screen_bottom > object_top) {
-                        $(elem).css({
-                            'opacity': '1',
-                            'transform': 'translateY(0%)'
-                        });
-                    }
-                }); 
-                $('.slide-in-h').each( function(i, elem) {
-                    var object_left = $(elem).offset().left + $(elem).outerWidth()/5;
-                    var screen_right = $(window).scrollLeft() + $(window).width();
-                    
-                    if (screen_right > object_left) {
-                        $(elem).css({
-                            'opacity': '1',
-                            'transform': 'translateX(0%)'
-                        });
-                    }
-                });
-            }
         </script>
+        
+        <!-- <script src="/js/scroll.js"></script> -->
     </body>
 </html>
