--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,7 +40,13 @@ body {
 
 h1 {
   font-family: Canela;
-  margin: 1.4rem 0rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+}
+
+h2, h3 {
+  font-family: Canela;
+  font-weight: 600;
 }
 
 p {
@@ -50,6 +56,8 @@ p {
 
 .bold {
   /* font-family: BoldItalicCaslon; */
+  /* color: #ff9d00; */
+  color: #bd3957;
   font-weight: bold;
 }
 
@@ -69,13 +77,14 @@ p {
 
 .next-head {
   font-family: Canela;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 1rem 0rem;
 }
 
 .kr {
   font-family: Canela;
   font-size: 1.2rem;
+  font-weight: 600;
   margin-bottom: 2rem;
 }
 
@@ -124,16 +133,17 @@ p {
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 785px) {
   h1 {
-    margin: 2rem 0rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
   }
   p {
     font-size: 1.2rem;
   }
   .next-head {
-    font-size: 2rem;
-    margin: 1.5rem 0rem;
+    font-size: 1.5rem;
+    margin: 1rem 0rem;
   }
   .caption {
     font-size: 1rem;
@@ -150,8 +160,8 @@ a, a:hover, a:focus, a:active {
  }
 
 #sidebar-wrapper {
-  min-height: 100vh;
-  margin-left: -15rem;
+  height: 100vh;
+  /* margin-left: -15rem; */
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
@@ -162,7 +172,13 @@ a, a:hover, a:focus, a:active {
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-  /* position: fixed; */
+  justify-content: space-between;
+  position: fixed;
+  z-index: 1000;
+}
+
+#sidebar-wrapper.toggled {
+  margin-left: -15rem;
 }
 
 #sidebar-wrapper a {
@@ -173,6 +189,8 @@ a, a:hover, a:focus, a:active {
   font-size: 1rem;
   /* font-weight: bold; */
   text-transform: uppercase;
+  border: none !important;
+
   /* font-family: 'Crimson Text', serif; */
   
 }
@@ -204,7 +222,7 @@ a, a:hover, a:focus, a:active {
 	transform: scale(0.1, 1);
 }
 .btn-2:hover {
-	letter-spacing: 4px;
+	letter-spacing: 3px;
 }
 .btn-2:hover::before {
 	opacity: 1;	
@@ -229,7 +247,6 @@ a, a:hover, a:focus, a:active {
 #sidebar-wrapper .sidebar-heading {
   padding: 0.875rem 1.25rem;
   font-size: 1.2rem;
-  margin-bottom: 20vh;
 }
 
 #sidebar-wrapper .list-group {
@@ -242,8 +259,8 @@ a, a:hover, a:focus, a:active {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 25vh;
   font-size: 0.8rem !important;
+  padding-bottom: 2rem
 }
 
 .sidebar-footer p {
@@ -256,15 +273,92 @@ a, a:hover, a:focus, a:active {
   position: relative;
   height: 100vh;
   -webkit-overflow-scrolling: touch;
+  
 }
 
 .wrapper {
+    height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
     width: auto;
     position: relative;
+    margin-left: 15rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+}
+
+.wrapper.toggled {
+  margin-left: 0rem;
+}
+
+.search {
+  margin-left: 1.7rem;
+  margin-bottom: 93vh;
+  position: fixed;
+  z-index: 99;
+  max-width: 85%;
+}
+
+.search-btn{
+  /* font-family: 'Crimson Text', serif; */
+  font-size: 0.9rem;
+  margin-top: 1.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0;
+  text-transform: uppercase;
+  border: 1px solid currentColor;
+  position: relative;
+  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+  color: #d4a14e !important;
+  border-color: #1b1f24;
+  background: #1b1f24;
+}
+
+.search-btn:hover {
+    /* color: #d4a14e !important; */
+  border-color: #393c3f;
+  background-color: #393c3f;
+    /* text-shadow: nthree; */
+}
+
+.date-row {
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-between; 
+  align-items: center;
+}
+
+.tag{
+  /* font-family: 'Crimson Text', serif; */
+  font-weight: 500;
+  font-size: 0.8rem;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0;
+  text-transform: uppercase;
+  border: 1px solid currentColor;
+  position: relative;
+  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+  color: #d4a14e !important;
+  border-color: #1b1f24;
+  background: #1b1f24;
+  margin-bottom: 1rem;
+}
+
+.tag:hover {
+    /* color: #d4a14e !important; */
+  border-color: #393c3f;
+  background-color: #393c3f;
+    /* text-shadow: nthree; */
+}
+
+@media (min-width: 785px) {
+    .search {
+      margin-left: 5rem;
+    }
 }
 
 .show-wrapper{
@@ -273,7 +367,16 @@ a, a:hover, a:focus, a:active {
   flex-direction: column;
   margin-top: 3rem;
   align-items: center;
+  margin-left: 15rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
   /* justify-content: center; */
+}
+
+.show-wrapper.toggled {
+  margin-left: 0rem;
 }
 
 .show-container{
@@ -288,8 +391,8 @@ a, a:hover, a:focus, a:active {
 }
 
 .hdivider {
-  width: 70vw;
-  margin-right: 7rem;
+  width: 90%;
+  margin-right: 0rem;
   border-top: 1px solid;
   opacity: 25%;
 }
@@ -297,19 +400,74 @@ a, a:hover, a:focus, a:active {
 .keep-reading {
   padding: 1rem;
   margin-bottom: 5rem;
+  margin-right: 0px;
   width: 100%;
   /* border-top: 1px solid rgba(0, 0, 0, 0.25); */
 }
 
+.related-news {
+    width: 100%;
+    margin-bottom: 3rem;
+}
+
+.keep-reading .divider {
+  display: none;
+}
+
+.keep-reading .btn {
+  margin-top: 0rem;
+}
+
 .keep-reading>div {
-  display: flex;
   flex-direction: column;
 }
+
+.related-news .bold {
+  font-size: 1rem;
+}
+
+.related-news .trail {
+  font-size: 1.1rem;
+}
+
+.related-news img {
+  height: 12rem;
+}
+
+@media (min-width: 785px) {
+  .hdivider {
+    margin-right: 7.5%;
+  }
+  .related-news .bold {
+    font-size: 1.2rem;
+  }
+  .related-news{
+      width: 20.5%;
+      margin-bottom: 0rem;
+  }
+  .keep-reading .divider {
+    display: block;
+    height: inherit;
+    margin: 0 1.5rem;
+  }
+  .keep-reading>div {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+  }
+
+}
+
+
+/* .keep-reading>div {
+  display: flex;
+  flex-direction: column;
+} */
 
 .news-container {
     flex: 0 0 auto;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     margin: 0;
     display: flex;
     justify-content: center;
@@ -321,18 +479,20 @@ a, a:hover, a:focus, a:active {
 
 .news-container p{
   font-size: 0.9rem;
+  margin-bottom: 0;
 }
 
 .slide-in {
   opacity: 0; /* used for animated fade-in */
-  transform: translateY(15%); /* used for animated slide-up*/
-  transition: opacity 1s ease-in-out, transform 1s ease-in-out
+  transform: translateY(10%); /* used for animated slide-up*/
+  overflow-y: hidden;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out
 }
 
 .slide-in-h {
   opacity: 0; /* used for animated fade-in */
   transform: translateX(15%); /* used for animated slide-up*/
-  transition: opacity 1s ease-in-out, transform 1s ease-in-out
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out
 }
 
 .divider {
@@ -343,21 +503,17 @@ a, a:hover, a:focus, a:active {
 
 .news-img {
   width: 100%;
-  height: 15rem;
+  height: 10rem;
   object-fit: cover;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
 }
 
 #menu-toggle {
     height: 3.8rem;
     width: 3.8rem;
     font-size: 1.8rem;
-    position: absolute;
-    z-index: 99;
-    margin-left: 0rem;
+    position: fixed;
+    z-index: 150;
+    /* margin-left: 0rem; */
     -webkit-transition: margin .25s ease-out;
     -moz-transition: margin .25s ease-out;
     -o-transition: margin .25s ease-out;
@@ -367,28 +523,63 @@ a, a:hover, a:focus, a:active {
     align-items: center;
 }
 
+.is-active {
+  margin-left: 15rem;
+}
+
 .cta {
-  height: 3.8rem;
+  height: 2.5rem;
   width: 5rem;
   /* font-size: 1.8rem; */
   position: absolute;
-  top: 92vh;
+  top: 94vh;
   left: 70vw;
   z-index: 80;
+}
+
+.backToFront {
+  /* height: 3.8rem; */
+  /* width: 10rem; */
+  font-family: 'Crimson Text', serif;
+  position: absolute;
+  top: 2vh;
+  left: 60vw;
+  z-index: 80;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s ease;
+}
+
+.backToFront.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.backToFront:hover {
+  cursor: pointer;
+  letter-spacing: 1px;
 }
 
 #menu-toggle.toggled {
     margin-left: 15rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 785px) {
     #page-content-wrapper {
         overflow: hidden;
-        min-height: 760px;
-        min-width: 0;
+        /* min-height: 760px; */
+        /* min-width: 0; */
         width: 100%;
     }
-    .news-container:nth-child(1) {
+    .news-container:nth-of-type(1) {
+      margin-left: 5rem;
+    }
+    .wrapper {
+      margin-left: 20rem;
+    }
+    .wrapper.toggled {
       margin-left: 5rem;
     }
     .news-container {
@@ -396,10 +587,15 @@ a, a:hover, a:focus, a:active {
         padding: 5rem;
     }
     .news-img {
-      height: 20rem;
+      height: 15rem;
     }
     .cta {
+      top: 92vh;
       left: 80vw;
+    }
+    .backToFront {
+      left: 80vw;
+      top: 5vh;
     }
     .news-container p{
       font-size: 1.1rem;
@@ -408,17 +604,15 @@ a, a:hover, a:focus, a:active {
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 785px) {
   #sidebar-wrapper {
     margin-left: 0;
   }
 
-  #wrapper.toggled #sidebar-wrapper {
-    margin-left: -15rem;
-  }
+
 
   #menu-toggle {
-    margin-left: 15rem;
+    /* margin-left: 15rem; */
   }
 
   #menu-toggle.toggled {
@@ -427,11 +621,12 @@ a, a:hover, a:focus, a:active {
 
   .show-wrapper {
     margin-top: 6rem;
-    margin-left: 4rem;
+    /* margin-left: 4rem; */
   }
 
-  .show-container, .keep-reading>div{
+  .show-container{
     flex-direction: row;
+
   }
 
   .show-col {
@@ -445,11 +640,15 @@ a, a:hover, a:focus, a:active {
     line-height: 1.3;
   }
 
-  .show-col:nth-child(2) {
-    margin-top: 4rem;
+  .show-col>.news-img {
+    height: 18rem;
   }
 
-  .keep-reading .show-col:nth-child(2) {
+  .show-col:nth-child(2) {
+    margin-top: 5rem;
+  }
+
+  .keep-reading{
     margin-top: 1rem;
   }
 }
@@ -457,10 +656,66 @@ a, a:hover, a:focus, a:active {
 
 @media (min-width: 1200px) {
   .show-wrapper{
+    margin-left: 24rem;
+  }
+
+  .show-wrapper.toggled{
     margin-left: 9rem;
   }
 
   .show-col {
     margin-right: 8rem;
   }
+}
+
+
+.loading {
+	opacity: 0;
+	display: flex;
+	/* position: fixed;
+	bottom: 50px;
+	left: 50%; */
+	transform: translateX(-50%);
+	transition: opacity .3s ease-in;
+  margin-left: -3rem;
+  z-index: 99;
+}
+
+.loading.show {
+	opacity: 1;
+}
+
+.ball {
+	background-color: #777;
+	border-radius: 50%;
+	margin: 5px;
+	height: 10px;
+	width: 10px;
+	animation: jump .5s ease-in infinite;
+}
+
+.ball:nth-of-type(2) {
+	animation-delay: 0.1s;
+}
+
+.ball:nth-of-type(3) {
+	animation-delay: 0.2s;
+}
+
+@keyframes jump {
+	0%, 100% {
+		transform: translateY(0);
+	}
+	
+	50% {
+		transform: translateY(-10px);
+	}
+}
+
+.back {
+  transition: 0.3s ease;
+}
+
+.back:hover {
+  letter-spacing: 1px;
 }
