changed minor spacing

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<% layout('boilerplate2') %>
+<% layout('boilerplate') %>
 <div class="show-wrapper">
     <div class="show-container">
         <div class="show-col">
@@ -33,7 +33,7 @@
     </div>
     <br>
     <br>
-    <div class="hdivider"></div>
+    <!-- <div class="hdivider"></div>
     <br>
     <div class="keep-reading slide-in">
         <p class="kr">Start reading...</p>
@@ -48,7 +48,7 @@
                 <a class="btn btn-0" href="/">Start reading</a>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <script src="/js/jquery.min.js"></script>
