--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,61 +1,74 @@
-<% layout('boilerplate') %> 
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proto 1</title>
-    <link rel="stylesheet" href="/css/bulma.css">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-    <div class="container is-max-widescreen"> -->
-        <section class="section">
-            <div class="block">
-                <h1 class="title is-1">Hi! Welcome to our first prototype</h1>
-            </div>
-            <div class="block">
-                <h2 class="subtitle">By <strong>dadylonglegs</strong> and <strong>λman</strong></h2>
-            </div>
-        </section>
+<% layout('boilerplate') %>
 
-        <div class="block box">
-            <form action="/" method="POST">
-                <div class="field">
-                    <label for="textIn" class="label">Text In</label>
-                    <div class="control">
-                      <textarea id="textIn" name="textIn" class="textarea" placeholder="Type your text here"></textarea>
-                    </div>
-                </div>
-                <div class="control">
-                    <button class="button is-link">Submit</button>
-                    
-                </div>
-            </form>
+<a class="backToFront bold" style="color: #1b1f24;"><i class="fas fa-long-arrow-alt-left"> </i>Back to front</a>
+<p class="cta bold" style="color: #1b1f24;">Scroll  <i class="fas fa-long-arrow-alt-right"></i></i></p>
+<div id="page-content-wrapper">
+    <p class="type" style="display: none;"><%=type%></p>
+    <% let mg = 2; %> 
+    <% if(type == 'search') {%> 
+        <% mg = 4; %> 
+    <% } %> 
+    <div class="wrapper" style="margin-top: <%=mg%>rem;">
+        <div class="search">
+            <% if(type == 'search') {%> 
+                <h2>Search results for "<%= query %> "</h2>
+                <form class="d-flex" action="/search" method='GET'>
+                    <input class="form-control me-2" name="q" type="search" placeholder="Search all news" aria-label="Search" required>
+                    <button class="search-btn" style="margin-top: 0;" type="submit">Search</button>
+                    </form>
+            <% } else {%> 
+                <h2><%=type[0].toUpperCase() + type.slice(1)%> News</h2>
+            <% } %> 
         </div>
-        <div class="block box">
-            <div class="field">
-                <label class="label">Text Out</label>
-                <div class="control">
-                  <textarea id="textOut" class="textarea" placeholder="Your output shows up here"></textarea>
-                </div>
-            </div>
-        </div>
-        <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim illo officiis eveniet. Error natus, vero deleniti quaerat labore ratione recusandae corrupti magni aperiam deserunt architecto aut illo nesciunt sit illum?
-            Aspernatur, officiis sit blanditiis unde amet cumque fugiat sequi sapiente. Esse possimus excepturi libero, eius corrupti harum corporis error in ut molestias sequi asperiores tempore repellat fugiat cupiditate nesciunt beatae!
-            Debitis, ullam! Mollitia excepturi laborum necessitatibus porro perferendis itaque sunt modi asperiores voluptate nesciunt fugit officiis eligendi labore quis dolorem obcaecati nemo hic totam, magnam, distinctio magni harum aspernatur quae?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sapiente tempora consectetur, iste iure, obcaecati facilis consequuntur vitae rerum officia quos mollitia minima? Deleniti praesentium fugit libero nam dolores officiis.
-            Exercitationem beatae recusandae sequi quis eius numquam quasi obcaecati aut sed tempore, omnis pariatur ullam nihil accusamus minima saepe necessitatibus asperiores ea dolore consequuntur aliquid libero nisi adipisci? Dolor, itaque!
-            Perferendis nisi amet, nesciunt totam eaque perspiciatis doloribus omnis! Eos consequuntur praesentium sequi officiis pariatur rerum reprehenderit corrupti, eum beatae incidunt facere ad nulla non repellendus iure commodi quae porro.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere blanditiis nemo cupiditate libero et vitae laborum veniam harum ullam nesciunt enim, aperiam amet earum quas voluptates. Obcaecati odit itaque sed.
-            Alias eveniet ipsa doloribus ut error repellat quibusdam, eius ad, facilis repudiandae deleniti consequuntur dignissimos enim excepturi illo est eaque nemo. Praesentium nulla quibusdam ducimus sunt recusandae quam velit tenetur!
-            Reiciendis dignissimos error a suscipit similique totam deleniti incidunt blanditiis veritatis aliquam? Quibusdam voluptatem ex placeat laudantium iure suscipit tempore, beatae fuga non quidem fugit soluta. Nihil vero aliquid blanditiis.
-            Dicta aut similique odit soluta exercitationem repudiandae deleniti impedit, provident distinctio, quos illo fugit, quae blanditiis nam omnis ad dolore ipsa rem explicabo doloremque laudantium. Nemo a perspiciatis amet dolorem.</p> -->
+        <% if(!news) {%> 
+            <h1 style="margin-left: 5rem; margin-top: -5rem;">No search results</h1>
+        <% } else { %> 
+            <% let days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];  %>
+            <% news.forEach(function (item, i) {%>
+                <% if(item) {%> 
+                    <% if(i%2 == 0) {%> 
+                        <div class="news-container slide-in-h" >
+                            <div>
+                                <% let date = new Date( Date.parse(item.Info.Date)); %> 
+                                <div class="date-row" >
+                                    <p class="bold"><%= days[date.getDay()] + date.toGMTString().slice(3, 16)%></p>
+                                    <a class="tag" href="/<%=item.Info.SectionId%>"><%=item.Info.SectionId%></a>
+                                </div>
+                                <h1><%= item.Article.Title %></h1>
+                                <p><%= item.Article.TrailText %></p>
+                                <br>
+                                <% if(item.Image.ImageFileURL.length) {%> 
+                                <img class="news-img" src="<%=item.Image.ImageFileURL%>" alt="<%=item.Image.Caption%>">
+                                <% } %> 
+                                <a class="btn btn-0" href="/<%=type%>/<%=item.ObjectId%><%= type == 'search' ? '?q='+query : ''%>">Start reading</a>
+                            </div>
+                        </div>
+                        <div class="divider"></div>
+                    <% } else {%> 
+                        <div class="news-container slide-in-h" >
+                            <div>
+                                <% if(item.Image.ImageFileURL.length) {%> 
+                                    <img class="news-img" src="<%=item.Image.ImageFileURL%>" alt="<%=item.Image.Caption%>">
+                                    <br>
+                                    <br>
+                                <% } %> 
+                                <% let date = new Date( Date.parse(item.Info.Date)); %> 
+                                <div class="date-row">
+                                    <p class="bold"><%= days[date.getDay()] + date.toGMTString().slice(3, 16)%></p>
+                                    <a class="tag" href="/<%=item.Info.SectionId%>"><%=item.Info.SectionId%></a>
+                                </div>
+                                <h1><%= item.Article.Title %></h1>
+                                <p><%= item.Article.TrailText %></p>
+                                <a class="btn btn-0" href="/<%=type%>/<%=item.ObjectId%><%= type == 'search' ? '?q='+query : ''%>">Start reading</a>
+                            </div>
+                        </div>
+                        <div class="divider"></div>
+                    <% } %> 
+                <% } %> 
+            <% }) %> 
+        <% } %> 
     </div>
+</div>
 
-    
-<!-- 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-</body>
-</html> -->
+<script src="/js/jquery.min.js"></script>
+<script src="/js/hScroll.js"></script>
