--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -2,24 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proto 1</title>
-    <link rel="stylesheet" href="/css/bulma.css">
+    <title>Paperboy</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="/css/hamburgers.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/js/index.js"></script>
 </head>
-<body>
-
-    <%- include('./partials/navbar') %> 
-    <div id="wrapper">
-        <div class="container">
-            <%- body %> 
+<body class="sb-nav-fixed">
+    <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="" id="sidebar-wrapper">
+            <div class="sidebar-heading title">
+                <h1>Paperboy</h1>
+            </div>
+            <div class="list-group list-group-flush">
+                <a href="/" class="list-group-item list-group-item-action btn-2">Home</a>
+                <a href="/world" class="list-group-item list-group-item-action btn-2">World</a>
+                <a href="/technology" class="list-group-item list-group-item-action btn-2">Technology</a>
+                <a href="/science" class="list-group-item list-group-item-action btn-2">Science</a>
+                <a href="/environment" class="list-group-item list-group-item-action btn-2">Environment</a>
+                <!-- <a href="#" class="list-group-item list-group-item-action btn-2">Summarizer</a> -->
+                <a href="/about" class="list-group-item list-group-item-action btn-2">About</a>
+            </div>
+            <div class="sidebar-footer">
+                <p>by</p>
+                <p>Allen Gao</p>
+                <p>&</p>
+                <p>Zhongchi Li</p>
+            </div>
         </div>
-    </div>
-    <%- include('./partials/footer') %> 
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <button id="menu-toggle" class="hamburger hamburger--spring is-active" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+        </button>
+        
+        <%- body %> 
 
-</body>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+        <script src="/js/menuToggle.js"></script>
+    </body>
 </html>
