--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,9 +105,33 @@ p {
 
 
 @media (min-width: 785px) {
-  h1 {
+  .news-container h1 {
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.1rem;
+  }
+  .next-head {
+    font-size: 1.5rem;
+    margin: 1rem 0rem;
+  }
+  .caption {
+    font-size: 1rem;
+  }
+  .btn{
+    font-size: 0.8rem;
+    padding: 0.3rem 0.7rem;
+    margin-top: 0.8rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .news-container h1 {
     margin-top: 1rem;
     margin-bottom: 2rem;
+    font-size: 2.5rem;
   }
   p {
     font-size: 1.2rem;
@@ -118,6 +142,11 @@ p {
   }
   .caption {
     font-size: 1rem;
+  }
+  .btn{
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+    margin-top: 1.5rem;
   }
 }
 
@@ -517,17 +546,17 @@ a, a:hover, a:focus, a:active {
     margin-left: 5rem;
   }
   .wrapper {
-    margin-left: 20rem;
+    margin-left: 16rem;
   }
   .wrapper.toggled {
-    margin-left: 5rem;
+    margin-left: 3rem;
   }
   .news-container {
     width: 38rem;
     padding: 5rem;
   }
   .news-img {
-    height: 15rem;
+    height: 12rem;
   }
   .cta {
     top: 92vh;
@@ -542,7 +571,17 @@ a, a:hover, a:focus, a:active {
   }
 }
 
-
+@media (min-width: 1600px) {
+  .news-img {
+    height: 15rem;
+  }
+  .wrapper {
+    margin-left: 20rem;
+  }
+  .wrapper.toggled {
+    margin-left: 5rem;
+  }
+}
 
 @media (min-width: 785px) {
   #sidebar-wrapper {
@@ -558,12 +597,12 @@ a, a:hover, a:focus, a:active {
     flex-direction: row;
   }
   .show-col {
-    margin-right: 4rem;
+    margin-right: 3rem;
     width: 50%;
   }
   .show-col>h1 {
     margin: 2rem 0rem;
-    font-size: 3.4rem;
+    font-size: 2.8rem;
     line-height: 1.3;
   }
   .show-col>.news-img {
@@ -574,8 +613,17 @@ a, a:hover, a:focus, a:active {
   }
 }
 
+@media (min-width: 785px) {
+  .show-wrapper{
+    margin-left: 20rem;
+  }
+  .show-wrapper.toggled{
+    margin-left: 5rem;
+  }
 
-@media (min-width: 1200px) {
+}
+
+@media (min-width: 1600px) {
   .show-wrapper{
     margin-left: 24rem;
   }
@@ -584,6 +632,9 @@ a, a:hover, a:focus, a:active {
   }
   .show-col {
     margin-right: 8rem;
+  }
+  .show-col>h1 {
+    font-size: 3.4rem;
   }
 }
 
